<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.safesoft.proapp.distribute.activities.ActivityNewClient">

        <com.emmasuzuki.easyform.EasyTextInputLayout
            android:id="@+id/nom_client_check_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom_client_hint"
            app:errorMessage="@string/error_message_empty"
            app:errorType="empty"
             />

        <com.emmasuzuki.easyform.EasyTextInputLayout
            android:id="@+id/adresse_client_check_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorMessage="@string/error_message_empty"
            app:errorType="empty"
            android:hint="@string/adresse_client_hint"
            />

        <com.emmasuzuki.easyform.EasyTextInputLayout
            android:id="@+id/phone_client_check_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorMessage="@string/error_message_empty"
            android:inputType="number"
            android:hint="@string/phone_client_hint"
            app:errorType="empty"
            />


        <com.emmasuzuki.easyform.EasyTextInputLayout
            android:id="@+id/rc_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorMessage="@string/error_message_empty"
            android:inputType="number"
            android:hint="@string/registre_commerce_hint"
            app:errorType="empty" />

        <com.emmasuzuki.easyform.EasyTextInputLayout
            android:id="@+id/if_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorMessage="@string/error_message_empty"
            android:inputType="number"
            android:hint="@string/nif_client"
            app:errorType="empty" />

        <com.emmasuzuki.easyform.EasyTextInputLayout
            android:id="@+id/rib_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorMessage="@string/error_message_empty"
            android:inputType="number"
            android:hint="@string/rib_client"
            app:errorType="empty" />


        <Button
            android:id="@+id/sender"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/sandy_brown"
            android:text="@string/add_client"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:onClick="onClickButton"
            android:textColor="@android:color/white"
             />

</LinearLayout>
