<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.safesoft.proapp.distribute.activities.ActivitySetting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/parametre_rounded"
            android:text="@string/parametre_connexion"
            android:textColor="@color/accent"
            android:textStyle="italic" />

        <include layout="@layout/sub_layout_connexion" />

        <Button
            android:id="@+id/bt4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/parametre_rounded"
            android:text="@string/param_tres_serveur_ftp"
            android:textColor="@color/accent"
            android:textStyle="italic" />

        <include layout="@layout/sub_layout_ftp" />

        <Button
            android:layout_width="match_parent"
            android:id="@+id/bt3"
            android:textStyle="italic"
            android:textColor="@color/accent"
            android:background="@drawable/parametre_rounded"
            android:text="@string/param_tres_d_imprimente"
            android:layout_height="match_parent" />

        <include layout="@layout/zpref_printer" />

        <include layout="@layout/zpref_scanner" />

        <Button
            android:layout_width="match_parent"
            android:id="@+id/bt10"
            android:textStyle="italic"

            android:textColor="@color/accent"
            android:background="@drawable/parametre_rounded"
            android:text="@string/sauvegarde_des_donn_es"
            android:layout_height="match_parent" />

        <include layout="@layout/sub_backup" />

        <Button
            android:layout_width="match_parent"
            android:id="@+id/bt11"
            android:textStyle="italic"

            android:textColor="@color/accent"
            android:background="@drawable/parametre_rounded"
            android:text="@string/r_initialisation_des_donn_es"
            android:layout_height="match_parent" />

        <include layout="@layout/sub_reset" />

        <Button
            android:layout_width="match_parent"
            android:id="@+id/bt2"
            android:textStyle="italic"

            android:textColor="@color/accent"
            android:background="@drawable/parametre_rounded"
            android:text="@string/parametre_divers"
            android:layout_height="match_parent" />

        <include layout="@layout/param_divers" />


    </LinearLayout>


</ScrollView>
