<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp"
    tools:context="com.safesoft.proapp.distribute.activities.transfert.ActivityTransfert">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/produit_item_border"

        android:orientation="vertical"
        android:padding="8dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/produit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:text="@string/produit"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5.5">

            <TextView
                android:id="@+id/nbr_colis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/nbre_colis"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lettre_x"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:gravity="center_horizontal|center_vertical"
                android:text="X"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/colissage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/colissage"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lettre_equal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_horizontal|center_vertical"
                android:text="="
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/qt"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gratuit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/gratuit"
                android:textAlignment="center"
                android:textColor="@color/vert"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/puv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/p_u"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
