<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.safesoft.pro.distribute.activation.ActivityActivation">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/distribution_activation"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_weight="1.05">

            <com.emmasuzuki.easyform.EasyTextInputLayout
                android:id="@+id/code_client_check_edittext"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:hint="@string/code_client_hint"
                android:inputType="number"
                android:layout_gravity="right"
                app:errorMessage="@string/error_message_code_client"
                app:errorType="value"
                app:maxChars="6"
                app:minChars="1" />


            <com.emmasuzuki.easyform.EasyTextInputLayout
                android:id="@+id/nom_client_check_edittext"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/code_client_check_edittext"
                android:layout_marginTop="5dp"
                android:hint="@string/nom_client_hint"
                android:layout_gravity="right"
                app:errorMessage="@string/error_message_empty"
                app:errorType="empty" />


            <com.emmasuzuki.easyform.EasyTextInputLayout
                android:id="@+id/phone_client_check_edittext"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/nom_client_check_edittext"
                android:layout_alignStart="@+id/nom_client_check_edittext"
                android:layout_below="@+id/nom_client_check_edittext"
                android:layout_marginTop="5dp"
                android:hint="@string/phone_client_hint"
                android:inputType="number"
                android:layout_gravity="right"
                app:errorMessage="@string/error_message_empty"
                app:errorType="empty" />


            <com.emmasuzuki.easyform.EasyTextInputLayout
                android:id="@+id/revendeur_check_edittext"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/phone_client_check_edittext"
                android:layout_marginTop="5dp"
                android:hint="@string/revendeur_hint"
                android:visibility="gone"
                android:layout_gravity="right"
                app:errorMessage="@string/error_message_empty"
                app:errorType="empty" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom">

            <ImageButton
                android:id="@+id/activer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="5dp"
                android:background="@color/float_transparent"
                android:onClick="onClickButton"
                android:src="@mipmap/activate_icon" />


        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
