<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="#f5f5f5"
    android:layout_marginBottom="10dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/index_text"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:enabled="false"
            android:gravity="center"
            android:onClick="selectIndex"
            android:text="@string/index_text"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/index_pic"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:enabled="true"
            android:gravity="center"
            android:onClick="selectIndex"
            android:text="@string/index_pic"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/index_comm"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:enabled="true"
            android:gravity="center"
            android:onClick="selectIndex"
            android:text="@string/index_comm"
            android:textSize="20sp"
            android:visibility="gone" />
    </LinearLayout>


</LinearLayout>