<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 Steven Rudenko

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:background="@color/white"
    android:id="@+id/param_objectif"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/HeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black_overlay"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/param_tres_syst_me_objectif" />

    <TextView
        android:id="@+id/descrip_code_depot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_vous_permet_de_definir_une_somme_objective_a_atteindre_ap_res_des_ventes_faites"
        android:textSize="12sp"
        android:textColor="@color/gray" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_large_size"
        android:background="@color/divider" />

    <LinearLayout
        android:id="@+id/prefSpacingType"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:gravity="center"
        android:padding="10dp"
        android:weightSum="4"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/edit_objectif_title"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
          android:gravity="center"
            app:errorMessage="@string/error_message_empty"
            app:errorType="empty"
            android:layout_weight="2.5"
            app:expandedHintEnabled="false"
            android:layout_marginEnd="10dp"
            app:helperText="  "
            android:hint="@string/objectif_montant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_objectif"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/BtnObjectif"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="@drawable/button_bg"
            android:text="@string/valider" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:background="@color/divider" />

</LinearLayout>